--- a/proyecto-integrador/views/product.ejs
+++ b/proyecto-integrador/views/product.ejs
@@ -6,7 +6,7 @@
 <!-- product detail -->
 <div class="container products-wrapper">
     <div class="d-flex align-items-center">
-        <h2 class="products-title">Nombre del producto</h2> 
+        <h2 class="products-title"><%= nombreProducto %></h2> 
         <p class="product-detail-description">
             <a href="product-add.html">Editar</a>
         </p>
@@ -14,56 +14,23 @@
     <div class="product-detail">
         <div class="row">
             <article class="col-12 col-lg-8 product-detail-info">
-                <img src="./images/products/default-image.png" alt="" class="product-detail-img">
+                <img src="<%= imagen %>" alt="" class="product-detail-img">
                 <p class="product-detail-description">
-                    Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
-                    sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
-                    veritatis.</p>
+                    <%= descripcion %></p>
             </article>
+
             <div class="col-12 col-lg-4">
                 <section class="comments">
+                    <% for (let i=0; i < index[5]; i++ ) { %>
                     <article>
-                        <img src="https://via.placeholder.com/35" alt="">
+                        <img src="<%= comment[i].imagenPerfilC %>" alt="">
                         <div class="data">
                             <p class="user">
-                            <strong> <a href="profile.html">Nombre usuario: </a> </strong>
-                             Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore magnam, praesentium explicabo inventore molestias facilis labore. Fugit ipsa mollitia odit inventore consequuntur.</p>
+                            <strong> <a href="profile.ejs"><%= comment[i].nombreUsuarioC %></a> </strong>
+                            <%= comment[i].textoC %>
                         </div>
                     </article>
-                    <article>
-                        <img src="https://via.placeholder.com/35" alt="">
-                        <div class="data">
-                            <p class="user">
-                                <strong> <a href="profile.html">Nombre usuario: </a> </strong>
-                                Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur.</p>
-                        </div>
-                    </article>
-                    <article>
-                        <img src="https://via.placeholder.com/35" alt="">
-                        <div class="data">
-                            <p class="user">
-                                <strong> <a href="profile.html">Nombre usuario: </a> </strong>
-                                Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                </p>
-                        </div>
-                    </article>
-                    <article>
-                        <img src="https://via.placeholder.com/35" alt="">
-                        <div class="data">
-                            <p class="user">
-                                <strong> <a href="profile.html">Nombre usuario: </a> </strong>
-                                Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet.</p>
-                        </div>
-                    </article>
-                    <article>
-                        <img src="https://via.placeholder.com/35" alt="">
-                        <div class="data">
-                            <p class="user">
-                                <strong> <a href="profile.html">Nombre usuario: </a> </strong>
-                                Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore</p>
-                        </div>
-                    </article>
+                    <% } %>
 
                 </section>
                 <form class="form" action="" method="POST">
