parte de footr y register

--- a/proyecto-integrador/views/register.ejs
+++ b/proyecto-integrador/views/register.ejs
@@ -10,7 +10,64 @@
 				<h2 class="products-title">Registrate</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá va el formulario de registro. <br>
+			<h2 class="col-12"> <i>///////////////////////////////////////// 
+			<main class="mainRegister"></main>
+				<form action="" method="get"> 
+
+					<h3>Email</h3>
+					<div class="contenedor-input">
+				
+						<label for="miEmail"></label>
+						<input type="email" name="email" id="miEmail" value=""> 
+					</div>
+
+					<h3>Usuario</h3>
+					<div class="contenedor-input">
+					
+						<label for="miNombre"></label>
+						<input type="text" name="Nombre" id="miNombre" value="">
+					</div>
+		
+					<h3>Contraseña</h3>            
+					<div class="contenedor-input">
+		
+						<label for="miContra"></label>
+						<input type="password" name="password" id="miContra" value=""> 
+
+					</div>
+
+					<h3>Fecha de nacimiento</h3>
+					<div class="contenedor-input">
+					
+						<label for="miFecha"></label>
+						<input type="number" name="Fecha" id="miFecha" value="">
+					</div>
+
+					<h3>Nro de documento</h3>
+					<div class="contenedor-input">
+					
+						<label for="miDNI"></label>
+						<input type="number" name="DNI" id="miDNI" value="">
+					</div>
+
+					<h3>Usuario</h3>
+					<div class="contenedor-input">
+					
+						<label for="miNombre"></label>
+						<input type="text" name="Nombre" id="miNombre" value="">
+					</div>
+
+					<div class="contenedor-input1">
+						<label for="Registrar"></label>
+						<input type="button" value="Registrarme">
+					
+						<label for="Cancelar"></label>
+						<input type="reset" value="Cancelar">
+					</div>
+				</form>
+			</main>
+			
+				<br> Acá va el formulario de registro. <br>
 			Debe cumplir con los puntos de la consigna y ser coherente con la tabla de la base de datos <br>
 			Eliminen estás líneas y coloquen el formulario. <br>
 			Recuerden todo lo que necesita tanto la etiqueta form como los campos input para operar correctamtente</i> <br>
