--- a/proyecto-integrador/public/stylesheets/app.css
+++ b/proyecto-integrador/public/stylesheets/app.css
@@ -66,14 +66,25 @@ hr {
 
 
 /*====== Main Header ======*/
+.header__a {
+  display: flex;
+  align-items: center;
+}
+.container {
+  display: flex;
+  align-items: center;
+}
 .main-header {
   padding: 15px 0;
-  background-color: var(--yellow);
+  background-color: #ffffff;
+  padding: 15px 0;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
 }
 
-.main-header_home-link,
-.main-header_credit-link {
-  display: block;
+.nav__img {
+  width: 50%;
 }
 
 .main-header_credit-link {
@@ -82,32 +93,6 @@ hr {
   text-align: center;
 }
 
-.search-form {
-  position: relative;
-  display: flex;
-  align-items: center;
-}
-
-.search-form_input {
-  border: solid 1px var(--light-gray);
-  display: block;
-  width: 100%;
-  padding: 7px 35px 7px 7px;
-  border-radius: 3px;
-  height: 40px;
-  font-size: 1.5em;
-}
-
-.search-form_button {
-  position: absolute;
-  right: 2px;
-  height: 60%;
-  background-color: #ffffff;
-  border: none;
-  border-left: solid 1px var(--light-gray);
-  color: var(--gray);
-  cursor: pointer;
-}
 
 
 /*====== Main Navbar ======*/
@@ -123,10 +108,12 @@ hr {
 }
 
 .main-navbar {
-  margin-top: 20px;
   display: none;
 }
 
+.left-navbar{
+  padding-right: 16rem;
+}
 .left-navbar,
 .right-navbar {
   font-size: 1.5em;
@@ -145,9 +132,12 @@ hr {
 
 .left-navbar a,
 .right-navbar a {
-  display: block;
   padding: 5px 0;
   border-bottom: solid 1px var(--gray);
+}
+
+.right-navbar {
+  padding-left: 0;
 }
 
 
@@ -527,4 +517,89 @@ textarea.form-input {
     width: 95%;
     margin: auto;
   }
+}
+
+*{
+  box-sizing: border-box;
+}
+
+header {
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+}
+
+.nav__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav__header:hover {
+  background-color: #1C140C;
+}
+
+.nav__img {
+  width: 15rem;
+}
+
+.ul-navbar-center {
+  margin: 0;
+}
+
+.nav__ul-li {
+  display: inline-block;
+  margin-right: 1rem;
+}
+
+.uk-navbar-right {
+  margin: 0;
+}
+
+.header__div {
+  display: flex;
+  background-color: #000;
+  justify-content: center;
+  padding: 0.5rem;
+  color: #EDDACE;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+
+}
+
+
+.ul__li-a {
+  color: #EDDACE;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.ul__li-a:hover {
+  text-decoration: none;
+  color: #A1948C;
+}
+
+.uk-navbar-toggle {
+  color: #EDDACE !important;
+}
+
+.uk-navbar-toggle:hover {
+  color: #A1948C !important;
+  ;
+}
+
+.uk-slideshow {
+  height: 80% !important;
+}
+
+
+.uk-slideshow-items {
+  aspect-ratio: 20/9 !important;
+}
+
+
+.uk-dotnav{
+  margin: 0 !important;
 }
