--- a/proyecto-integrador/views/partials/header.ejs
+++ b/proyecto-integrador/views/partials/header.ejs
@@ -1,60 +1,38 @@
 	<!-- Header -->
-	<header class="main-header">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-5 col-md-2">
-					<a href="index.html" class="main-header_home-link">
-						<img src="./images/logo-mercado-liebre.svg">
-					</a>
-				</div>
-	
-				<div class="col-7 col-md-6">
-					<form action="" method="GET" class="search-form">
-						<input type="text" name="search" placeholder="Buscar productos, marcas y más"
-							class="search-form_input">
-						<button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
-					</form>
-				</div>
-	
-				<div class="col-12 col-md-4">
-					<a class="main-header_credit-link">
-						<i class="fas fa-hand-holding-usd"></i>
-						Todas las opiniones en un solo lugar.
-					</a>
-				</div>
-			</div>
-	
-			<button class="btn-toggle-navbar">
-				<i class="fas fa-bars"></i>
-			</button>
-	
-			<nav class="main-navbar">
-				<ul class="left-navbar">
-					<li><a href="index.html">Todos los productos</a></li>
-					<li><a href="">Cargar productos</a></li>
-				</ul>
-	
-				<ul class="right-navbar">
-					<li><a href="profile.html">
-							Nombre del usuario <i class="fas fa-user"></i>
-						</a>
-					</li>
-					<li>
-						<form action="" method="post">
-							<button class="logout" type="submit">
-								Cerrar sesión <i class="fas fa-sign-in-alt"></i>
-							</button>
-						</form>
-					</li>
-					<!-- Solo deslogueado <li>
-							<a href="register.html">Creá tu cuenta <i class="far fa-address-card"></i>
-							</a>
-						</li>
-						<li>
-							<a href="login.html">Ingresá <i class="fas fa-sign-in-alt"></i></a>
-						</li> -->
-				</ul>
-			</nav>
-		</div>
-	</header>
+	<header>
+        <div class="header__div">
+            <span class="div__span">ENVÍOS A TODO EL PAIS</span>
+        </div>
+        <nav class="nav__header">
+            <a href="/"><img class="nav__img" src="./images/logo.png" alt="Company logo"></a>
+            <div>
+                <ul class="ul-navbar-center">
+                    <li class="nav__ul-li"><a class="ul__li-a" href="/">TODOS LOS PRODUCTOS</a></li>
+                    <li class="nav__ul-li"><a class="ul__li-a" href="/">AGREGAR PRODUCTOS</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul class="uk-navbar-right">
+                    <li class="nav__ul-li">
+                        <a class="uk-navbar-toggle" href uk-search-icon></a>
+                        <div class="uk-drop" uk-drop="mode: click; pos: left-center; offset: 0">
+                            <div class="uk-search uk-search-navbar uk-width-1-1">
+                                <form class="uk-search-input">
+                                    <input class="uk-search-input" type="search" name="q" placeholder="search"
+                                        aria-label="Search" autofocus>
+                                </form>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="nav__ul-li">
+                        <a class="ul__li-a" href="/register"><i class="far fa-address-card"></i>
+                        </a>
+                    </li>
+                    <li class="nav__ul-li">
+                        <a class="ul__li-a" href="/login"><i class="fas fa-sign-in-alt"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 	<!-- /Header -->
