--- a/proyecto-integrador/views/partials/header.ejs
+++ b/proyecto-integrador/views/partials/header.ejs
@@ -8,7 +8,7 @@
             <div>
                 <ul class="ul-navbar-center">
                     <li class="nav__ul-li"><a class="ul__li-a" href="/">TODOS LOS PRODUCTOS</a></li>
-                    <li class="nav__ul-li"><a class="ul__li-a" href="/">AGREGAR PRODUCTOS</a></li>
+                    <li class="nav__ul-li"><a class="ul__li-a" href="/product/add">AGREGAR PRODUCTOS</a></li>
                 </ul>
             </div>
             <div>
