--- a/proyecto-integrador/views/register.ejs
+++ b/proyecto-integrador/views/register.ejs
@@ -10,7 +10,7 @@
 				<h2 class="products-title">Registrate</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// 
+			<h2 class="col-12"> <i>
 			<main class="mainRegister"></main>
 				<form action="" method="get"> 
 
@@ -67,11 +67,6 @@
 				</form>
 			</main>
 			
-				<br> Acá va el formulario de registro. <br>
-			Debe cumplir con los puntos de la consigna y ser coherente con la tabla de la base de datos <br>
-			Eliminen estás líneas y coloquen el formulario. <br>
-			Recuerden todo lo que necesita tanto la etiqueta form como los campos input para operar correctamtente</i> <br>
-			////////////////
 			</h2>
     <%- include('./partials/footer') %>
 </body>
