--- a/proyecto-integrador/views/index.ejs
+++ b/proyecto-integrador/views/index.ejs
@@ -1,94 +1,105 @@
 <!DOCTYPE html>
 <html>
-    <%- include('./partials/head') %>
-  <body>
-    <%- include('./partials/header') %>
-	<!-- Banner -->
-	<div uk-slideshow="autoplay: true; autoplay-interval: 3000; finite:true;">
+<%- include('./partials/head') %>
 
-		<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
+	<body>
+		<%- include('./partials/header') %>
+			<!-- Banner -->
+			<div uk-slideshow="autoplay: true; autoplay-interval: 3000;">
 
-			<div class="uk-slideshow-items">
-				<div>
-					<img class="banner__img" src="./images/banner1.png" alt="" uk-cover>
+				<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
+
+					<div class="uk-slideshow-items">
+						<div>
+							<img class="banner__img" src="/images/banner1.png" alt="" uk-cover>
+						</div>
+						<div>
+							<img class="banner__img" src="/images/banner2.png" alt="" uk-cover>
+						</div>
+						<div>
+							<img class="banner__img" src="/images/banner3.png" alt="" uk-cover>
+						</div>
+					</div>
+
+					<a class="uk-position-center-left uk-position-small uk-hidden-hover" href uk-slidenav-previous
+						uk-slideshow-item="previous"></a>
+					<a class="uk-position-center-right uk-position-small uk-hidden-hover" href uk-slidenav-next
+						uk-slideshow-item="next"></a>
+
 				</div>
-				<div>
-					<img class="banner__img" src="./images/banner2.png" alt="" uk-cover>
-				</div>
-				<div>
-					<img class="banner__img" src="./images/banner3.png" alt="" uk-cover>
-				</div>
+
+				<ul class="uk-slideshow-nav uk-dotnav uk-flex-center uk-margin"></ul>
+
 			</div>
+			<!-- /Banner -->
 
-			<a class="uk-position-center-left uk-position-small uk-hidden-hover" href uk-slidenav-previous
-				uk-slideshow-item="previous"></a>
-			<a class="uk-position-center-right uk-position-small uk-hidden-hover" href uk-slidenav-next
-				uk-slideshow-item="next"></a>
-
-		</div>
-
-		<ul class="uk-slideshow-nav uk-dotnav uk-flex-center uk-margin"></ul>
-
-	</div>
-	<!-- /Banner -->
-
-	<!-- Novedades -->
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Novedades</h2>
-			</div>
-			<!-- Show the "ultimos" products -->
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<% for (let i=0; i < index[5]; i++ ) { %>	
-					<a href="/product/<%= index[i].id %>">
-						<figure class="product-box_image">
-							<img src="<%= index[i].imagen %>" alt="">
-						</figure>
-						<article class="product-box_data">
-							<h2><%= index[i].nombreProducto %></h2>
-							<p><%= index[i].descripcion %></p>
-							<p>Comentarios: 3</p>
-						</article>
-					</a>
-					<% } %>
-				</section>
-			</div>
- 
-
-			
-		</div>
-	</div>
-	<!-- /Novedades -->
-	<!-- Más comentados -->
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Más comentados</h2>
-			</div>
-			<!-- Show the "ultimos" products -->
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<% for (let i=5; i < index.length; i++ ) { %>	
-						<a href="product.ejs">
-							<figure class="product-box_image">
-								<img src="<%= index[i].imagen %>" alt="">
-							</figure>
-							<article class="product-box_data">
-								<h2><%= index[i].nombreProducto %></h2>
-								<p><%= index[i].descripcion %></p>
-								<p>Comentarios: 3</p>
-							</article>
-						</a>
+			<!-- Novedades -->
+			<!-- Novedades -->
+			<div class="container products-wrapper">
+				<div class="row">
+					<div class="col-12">
+						<h2 class="products-title">NOVEDADES</h2>
+					</div>
+					<!-- Show the "ultimos" products -->
+					<% for (let i=0; i < index.length; i++ ) { %>
+						<div class="col-12 col-sm-6 col-lg-3">
+							<section class="product-box">
+								<a href="/product/<%= index[i].id %>">
+									<figure class="product-box_image">
+										<img src="<%= index[i].imagen %>" alt="">
+									</figure>
+									<article class="product-box_data">
+										<h2>
+											<%= index[i].nombreProducto %>
+										</h2>
+										<p>
+											<%= index[i].descripcion %>
+										</p>
+										<p>Comentarios: 3</p>
+									</article>
+								</a>
+							</section>
+						</div>
 						<% } %>
-				</section>
+				</div>
 			</div>
-			
-		</div>
-	</div>
-	<!-- /Más comentados -->
-    <%- include('./partials/footer') %>
-	<script src="./js/uikit.min.js"></script>
-  </body>
+			<!-- /Novedades -->
+
+			<!-- /Novedades -->
+			<!-- Más comentados -->
+			<div class="container products-wrapper">
+				<div class="row">
+					<div class="col-12">
+						<h2 class="products-title">MÁS COMENTADOS</h2>
+					</div>
+					<!-- Show the "ultimos" products -->
+					<% for (let i=5; i < index.length; i++ ) { %>
+						<div class="col-12 col-sm-6 col-lg-3">
+							<section class="product-box">
+								<a href="/product/<%= index[i].id %>">
+									<figure class="product-box_image">
+										<img src="<%= index[i].imagen %>" alt="">
+									</figure>
+									<article class="product-box_data">
+										<h2>
+											<%= index[i].nombreProducto %>
+										</h2>
+										<p>
+											<%= index[i].descripcion %>
+										</p>
+										<p>Comentarios: 3</p>
+									</article>
+								</a>
+							</section>
+						</div>
+						<% } %>
+				</div>
+			</div>
+
+			<!-- /Más comentados -->
+			<%- include('./partials/footer') %>
+				<script src="/js/uikit.min.js"></script>
+				<script src="/js/header-scroll.js"></script>
+	</body>
+
 </html>
