--- a/proyecto-integrador/public/stylesheets/app.css
+++ b/proyecto-integrador/public/stylesheets/app.css
@@ -265,8 +265,8 @@ hr {
 }
 
 .footer-data i {
-  color: var(--light-blue);
-  font-size: 3.5em;
+  color:  #EDDACE;
+  font-size: 2em;
 }
 
 .footer-data h2 {
@@ -293,6 +293,16 @@ hr {
   margin: 0;
   color: var(--gray);
   padding: 15px 0;
+}
+
+.bi-bi-shield-check {
+  color: #dcdcdc;
+}
+.bi-bi-shield-check {
+  color: #dcdcdc;
+}
+.bi-bi-shield-check {
+  color: #dcdcdc;
 }
 
 
