--- a/proyecto-integrador/views/partials/footer.ejs
+++ b/proyecto-integrador/views/partials/footer.ejs
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-12 col-lg-4">
                 <article class="footer-data">
-                    <i class="bi bi-credit-card"></i>
+                    <i class="fas fa-credit-card"></i>
                     <h2>Pagá con tarjeta o en efectivo</h2>
                     <p>En ICONIC, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago.
                         ¡Y siempre es seguro!</p>
@@ -11,14 +11,14 @@
             </div>
             <div class="col-12 col-lg-4">
                 <article class="footer-data">
-                    <i class="bi bi-gift"></i>
+                    <i class="fas fa-gift"></i>
                     <h2>Envío gratis desde $ 1.999</h2>
                     <p>Solo por estar registrado en ICONIC tenés envíos gratis en todos los productos.</p>
                 </article>
             </div>
             <div class="col-12 col-lg-4">
                 <article class="footer-data">
-                    <i class="bi bi-shield-check"></i>
+                    <i class="fas fa-user-shield"></i>
                     <h2>Seguridad, de principio a fin</h2>
                     <p>¿No te gusta? ¡Devolvelo! En ICONIC, no hay nada que no puedas hacer, porque estás siempre protegido.</p>
                 </article>
