--- a/proyecto-integrador/views/partials/header.ejs
+++ b/proyecto-integrador/views/partials/header.ejs
@@ -4,7 +4,7 @@
             <span class="div__span">ENVÍOS A TODO EL PAIS</span>
         </div>
         <nav class="nav__header">
-            <a href="/"><img class="nav__img" src="./images/logo.png" alt="Company logo"></a>
+            <a href="/"><img class="nav__img" src="/images/logo.png" alt="Company logo"></a>
             <div>
                 <ul class="ul-navbar-center">
                     <li class="nav__ul-li"><a class="ul__li-a" href="/">TODOS LOS PRODUCTOS</a></li>
