--- a/proyecto-integrador/views/profile-edit.ejs
+++ b/proyecto-integrador/views/profile-edit.ejs
@@ -1,18 +1,50 @@
 <!DOCTYPE html>
 <html lang="es">
-    <%- include('./partials/head') %>
-<body>
-    <%- include('./partials/header') %>
-<!-- Novedades -->
-<div class="container products-wrapper">
-    <div class="row">
-        <div class="col-12">
-            <h2 class="products-title">Editar mi perfil</h2>
-        </div>
-        <!-- Show the "ultimos" products -->
-        <h2 class="col-12"> <i>
+<%- include('./partials/head') %>
 
-        </h2>
-    <%- include('./partials/footer') %>
-</body>
+    <body>
+        <%- include('./partials/header') %>
+            <!-- Novedades -->
+            <div class="container products-wrapper">
+                <div class="row">
+                    <main class="mainRegister"></main>
+                    <form action="" method="get">
+
+                        <h3>Imagen</h3>
+                        <div class="contenedor-input">
+
+                            <label for="Imagen"></label>
+                            <input type="file" name="file" id="miFoto" value="">
+                        </div>
+
+                        <h3>Nombre del Producto</h3>
+                        <div class="contenedor-input">
+
+                            <label for="miNombre"></label>
+                            <input type="text" name="Nombre" id="miNombre" value="">
+                        </div>
+
+                        <h3>Descripcion</h3>
+                        <div class="contenedor-input">
+
+                            <label for="descripcion"></label>
+                            <input type="text" name="descripcion" id="miDescripcion" value="">
+
+                        </div>
+
+
+                        <div class="contenedor-input1">
+                            <label for="Registrar"></label>
+                            <input type="button" value="Registrarme">
+
+                            <label for="Cancelar"></label>
+                            <input type="reset" value="Cancelar">
+                        </div>
+                    </form>
+                </div>
+            </div>
+                    </main>
+                    <%- include('./partials/footer') %>
+    </body>
+
 </html>
