--- a/proyecto-integrador/views/login.ejs
+++ b/proyecto-integrador/views/login.ejs
@@ -4,15 +4,41 @@
 <body>
     <%- include('./partials/header') %>
     	<!-- Novedades -->
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Ingresar</h2>
-			</div>
-			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>
+		<main class="mainRegister"></main>
+		<form action="" method="get"> 
 
-			</h2>
+			<h3>Usuario</h3>
+			<div class="contenedor-input">
+		
+				<label for="miEmail"></label>
+				<input type="email" name="email" id="miEmail" value=""> 
+			</div>
+
+			<h3>Contraseña</h3>            
+			<div class="contenedor-input">
+
+				<label for="miContra"></label>
+				<input type="password" name="password" id="miContra" value=""> 
+
+			</div>
+
+			<h3>Recordarme</h3>            
+			<div class="contenedor-input">
+				<label for="Recordarme"></label>
+				<input type="checkbox" value="Recordarme">
+
+			</div>
+
+
+			<div class="contenedor-input1">
+				<label for="Registrar"></label>
+				<input type="button" value="Registrarme">
+			
+				<label for="Cancelar"></label>
+				<input type="reset" value="Cancelar">
+			</div>
+		</form>
+	</main>
 
     <%- include('./partials/footer') %>
 </body>
