--- a/proyecto-integrador/views/profile.ejs
+++ b/proyecto-integrador/views/profile.ejs
@@ -2,7 +2,7 @@
 <html lang="es">
     <%- include('./partials/head') %>
 <body>
-    <%- include('./partials/header') %>
+    <%- include('./partials/headerLogueado') %>
 	<!-- Datos del usuario -->
 	<section class="info-usuario container products-wrapper">
 		<div class="row">
