--- a/proyecto-integrador/views/partials/footer.ejs
+++ b/proyecto-integrador/views/partials/footer.ejs
@@ -23,6 +23,12 @@
                     <p>¿No te gusta? ¡Devolvelo! En ICONIC, no hay nada que no puedas hacer, porque estás siempre protegido.</p>
                 </article>
             </div>
+            <div class="col-12 col-lg-4">
+                <article class="footer-data">
+                    <h5>Antonella Axelrad | Victoria Lynch</h5>
+                </article>
+            </div>
+
         </div>
     </div>
 </footer>
