--- a/proyecto-integrador/views/product.ejs
+++ b/proyecto-integrador/views/product.ejs
@@ -5,48 +5,40 @@
     <%- include('./partials/header') %>
 <!-- product detail -->
 <div class="container products-wrapper">
-    <div class="d-flex align-items-center">
-        <h2 class="products-title"><%= nombreProducto %></h2> 
-        <p class="product-detail-description">
-            <a href="product-add.html">Editar</a>
-        </p>
-    </div>
+
     <div class="product-detail">
         <div class="row">
             <article class="col-12 col-lg-8 product-detail-info">
                 <img src="<%= imagen %>" alt="" class="product-detail-img">
-
             </article>
 
             <div class="col-12 col-lg-4">
                 <section class="comments">
                     <div class="div__h2-p">
-                        <h2 class = "products-title-especial">
+                        <h2 class="products-title_especial">
                             <%= nombreProducto %>
                         </h2>
-
                         <p class="product-detail-description">
                             <a class="product-detail-a" href="/product/add">Editar</a>
-
                         </p>
                     </div>
-
-                    <p class="product-detail-description">
+                    <p class="product-detail-description-p">
                         <%= descripcion %>
                     </p>
-
                     <% for (let i=0; i < 3; i++ ) { %>
-                    <article>
-                        <img src="<%= comment[i].imagenPerfilC %>" alt="">
-                        <div class="data">
-                            <p class="user">
-                            <strong> <a href="profile.ejs"><%= comment[i].nombreUsuarioC %></a> </strong>
-                            <%= comment[i].textoC %>
-                        </div>
-                    </article>
-                    <% } %>
+                        <article>
+                            <img src="<%= comment[i].imagenPerfilC %>" alt="">
+                            <div class="data">
+                                <p class="user">
+                                    <strong> <a class="product-detail-a" href="/profile">
+                                            <%= comment[i].nombreUsuarioC %>
+                                        </a> </strong>
+                                    <%= comment[i].textoC %>
+                            </div>
+                        </article>
+                        <% } %>
 
-                </section>
+
                 <form class="form" action="" method="POST">
                     <input class="form-input" type="text" value="" placeholder="Agregar comentario">
                     <button type="button" class="buy-now-button">AGREGAR COMENTARIO</button>
