--- a/proyecto-integrador/views/product.ejs
+++ b/proyecto-integrador/views/product.ejs
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
     <%- include('./partials/head') %>
-<body>
+
+    <body id="body__product">
+
     <%- include('./partials/header') %>
 <!-- product detail -->
-<div class="container products-wrapper">
+<div class="products-wrapper details">
     <div class="product-detail">
         <div class="row">
             <article class="col-12 col-lg-8 product-detail-info">
