--- a/proyecto-integrador/views/product.ejs
+++ b/proyecto-integrador/views/product.ejs
@@ -54,4 +54,6 @@
 <!-- /product detail -->
     <%- include('./partials/footer') %>
 </body>
+<script src="/js/uikit.min.js"></script>
+<script src="/js/header-scroll.js"></script>
 </html>
