header logueado, ruta users

--- a/proyecto-integrador/views/partials/headerLogueado.ejs
+++ b/proyecto-integrador/views/partials/headerLogueado.ejs
@@ -23,8 +23,8 @@
                         </div>
                     </div>
                 </li>
-                <li><a href="profile.html">
-                        Nombre del usuario <i class="fas fa-user"></i>
+                <li><a href="/profile">
+                    <%= nombreUsuario %> <i class="fas fa-user"></i>
                     </a>
                 </li>
                 <li>
