--- a/proyecto-integrador/views/partials/header.ejs
+++ b/proyecto-integrador/views/partials/header.ejs
@@ -17,9 +17,8 @@
                         <a class="uk-navbar-toggle" href uk-search-icon></a>
                         <div class="uk-drop" uk-drop="mode: click; pos: left-center; offset: 0">
                             <div class="uk-search uk-search-navbar uk-width-1-1">
-                                <form class="uk-search-input">
-                                    <input class="uk-search-input" type="search" name="q" placeholder="search"
-                                        aria-label="Search" autofocus>
+                                <form class="uk-search-input" action="/search/:nombreProducto" method="get">
+                                    <input class="uk-search-input" type="search" name="nombreProducto" placeholder="search" aria-label="Search" autofocus>
                                 </form>
                             </div>
                         </div>
