--- a/proyecto-integrador/views/profile.ejs
+++ b/proyecto-integrador/views/profile.ejs
@@ -12,7 +12,7 @@
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
 					<h1 class="main-title"><%= nombreUsuario %>
-						<a href="profile-edit.html">
+						<a href="/profile/edit">
 							<i class="fas fa-cog"></i>
 						</a>
 					</h1>
