cambios rutas y vistas

--- a/proyecto-integrador/public/stylesheets/app.css
+++ b/proyecto-integrador/public/stylesheets/app.css
@@ -667,3 +667,7 @@ header {
 .uk-link-toggle:hover .uk-link, .uk-link:hover, a:hover {
   text-decoration: none !important;
 }
+
+.mainRegister {
+  padding-top: 10em;
+}
