--- a/proyecto-integrador/views/product-add.ejs
+++ b/proyecto-integrador/views/product-add.ejs
@@ -4,6 +4,7 @@
 <body>
     <%- include('./partials/header') %>
 	<main class="mainRegister"></main>
+	<div>
 	<form action="" method="get"> 
 
 		<h3>Imagen</h3>
@@ -37,6 +38,7 @@
 			<input type="reset" value="Cancelar">
 		</div>
 	</form>
+</div>
 </main>
     <%- include('./partials/footer') %>
 </body>
