--- a/proyecto-integrador/views/register.ejs
+++ b/proyecto-integrador/views/register.ejs
@@ -4,14 +4,13 @@
 <body>
     <%- include('./partials/header') %>
 	<!-- Novedades -->
-	<div class="container products-wrapper">
+	<div class="products-wrapper details">
 		<div class="row">
 			<div class="col-12">
 				<h2 class="products-title">Registrate</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
 			<h2 class="col-12"> <i>
-			<main class="mainRegister"></main>
 				<form action="" method="get"> 
 
 					<h3>Email</h3>
@@ -65,7 +64,6 @@
 						<input type="reset" value="Cancelar">
 					</div>
 				</form>
-			</main>
 			
 			</h2>
 
