--- a/proyecto-integrador/views/product-add.ejs
+++ b/proyecto-integrador/views/product-add.ejs
@@ -2,7 +2,7 @@
 <html lang="es">
     <%- include('./partials/head') %>
 <body>
-    <%- include('./partials/header') %>
+    <%- include('./partials/headerLogueado') %>
 	<main class="mainRegister"></main>
 	<form action="" method="get"> 
 
