--- a/proyecto-integrador/views/profile-edit.ejs
+++ b/proyecto-integrador/views/profile-edit.ejs
@@ -3,7 +3,7 @@
 <%- include('./partials/head') %>
 
     <body>
-        <%- include('./partials/header') %>
+        <%- include('./partials/headerLogueado') %>
             <!-- Novedades -->
             <div class="container products-wrapper">
                 <div class="row">
