cambios en controlador y rutas porque vicky no pudo

--- a/proyecto-integrador/views/partials/headerLogueado.ejs
+++ b/proyecto-integrador/views/partials/headerLogueado.ejs
@@ -23,12 +23,12 @@
                         </div>
                     </div>
                 </li>
-                <li><a href="/profile">
-                    <%= nombre %> <i class="fas fa-user"></i>
+                <li><a href="/users/profile">
+                    <%= nombreUsuario %> <i class="fas fa-user"></i>
                     </a>
                 </li>
                 <li>
-                    <form action="" method="post">
+                    <form action="/" method="get">
                         <button class="logout" type="submit">
                             Cerrar sesión <i class="fas fa-sign-in-alt"></i>
                         </button>
