--- a/proyecto-integrador/views/profile.ejs
+++ b/proyecto-integrador/views/profile.ejs
@@ -12,7 +12,7 @@
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
 					<h1 class="main-title"><%= nombreUsuario %>
-						<a href="/profile/edit">
+						<a href="/users/profile/edit">
 							<i class="fas fa-cog"></i>
 						</a>
 					</h1>
@@ -37,9 +37,9 @@
 				<h2 class="products-title">Mis productos</h2>
 			</div>
 			<!-- Show mis productos -->
+			<% for (let i=0; i < 4; i++ ) { %>	
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<% for (let i=3; i < index[9]; i++ ) { %>	
 						<a href="/product/<%= index[i].id %>">
 							<figure class="product-box_image">
 								<img src="<%= index[i].imagen %>" alt="">
@@ -50,9 +50,9 @@
 								<p>Comentarios: 3</p>
 							</article>
 						</a>
-						<% } %>
 				</section>
 			</div>
+			<% } %>
 
 
 		</div>
