--- a/proyecto-integrador/views/product-add.ejs
+++ b/proyecto-integrador/views/product-add.ejs
@@ -4,42 +4,34 @@
 <body>
     <%- include('./partials/headerLogueado') %>
 	<main class="mainRegister"></main>
-	<div>
-	<form action="" method="get"> 
+	<div class="col-12">
+		<h2 class="products-title"><%= mensaje %></h2>
+	</div>
+	<div class="container__form">
+		<img src="/images/logo.png" alt="">
+		<form class="form-data" action="/" method="get">
+			<div class="contenedor-input">
+				<input class="form-file" type="file" placeholder="Imagen" required>
+				<label class="form-label" for="imagen"></label>
+			</div>
 
-		<h3>Imagen</h3>
-		<div class="contenedor-input">
-	
-			<label for="Imagen"></label>
-			<input type="file" name="file" id="miFoto" value=""> 
-		</div>
+			<div class="contenedor-input">
+				<input class="form-input" type="text" placeholder="Nombre del producto" required>
+				<label class="form-label" for="producto"></label>
+			</div>
 
-		<h3>Nombre del Producto</h3>
-		<div class="contenedor-input">
-		
-			<label for="miNombre"></label>
-			<input type="text" name="Nombre" id="miNombre" value="">
-		</div>
+			<div class="contenedor-input">
+				<textarea class="form-input" type="textarea" placeholder="Descripción" required></textarea>
+				<label class="form-label" for="descripcion"></label>
+			</div>
 
-		<h3>Descripcion</h3>            
-		<div class="contenedor-input">
-
-			<label for="descripcion"></label>
-			<input type="text" name="descripcion" id="miDescripcion" value=""> 
-
-		</div>
-
-
-		<div class="contenedor-input1">
-			<label for="Registrar"></label>
-			<input type="button" value="Registrarme">
-		
-			<label for="Cancelar"></label>
-			<input type="reset" value="Cancelar">
-		</div>
-	</form>
-</div>
-</main>
+			<div class="contenedor-input1">
+				<input class="form-input__button" type="submit" value="Agregar">
+				<label class="form-label" for="Agregar"></label>
+			</div>
+		</form>
+	</div>
+	</main>
     <%- include('./partials/footer') %>
 </body>
 <script src="/js/uikit.min.js"></script>
