--- a/proyecto-integrador/views/profile-edit.ejs
+++ b/proyecto-integrador/views/profile-edit.ejs
@@ -5,45 +5,45 @@
     <body>
         <%- include('./partials/headerLogueado') %>
             <!-- Novedades -->
-            <div class="container products-wrapper">
-                <div class="row">
-                    <main class="mainRegister"></main>
-                    <form action="" method="get">
-
-                        <h3>Imagen</h3>
-                        <div class="contenedor-input">
-
-                            <label for="Imagen"></label>
-                            <input type="file" name="file" id="miFoto" value="">
-                        </div>
-
-                        <h3>Nombre del Producto</h3>
-                        <div class="contenedor-input">
-
-                            <label for="miNombre"></label>
-                            <input type="text" name="Nombre" id="miNombre" value="">
-                        </div>
-
-                        <h3>Descripcion</h3>
-                        <div class="contenedor-input">
-
-                            <label for="descripcion"></label>
-                            <input type="text" name="descripcion" id="miDescripcion" value="">
-
-                        </div>
-
-
-                        <div class="contenedor-input1">
-                            <label for="Registrar"></label>
-                            <input type="button" value="Registrarme">
-
-                            <label for="Cancelar"></label>
-                            <input type="reset" value="Cancelar">
-                        </div>
-                    </form>
-                </div>
+            <main class="mainRegister"></main>
+            <div class="col-12">
+                <h2 class="products-title">Mi perfil</h2>
             </div>
-                    </main>
+            <div class="container__form">
+                <img src="/images/logo.png" alt="">
+                <form class="form-data" action="/users/profile" method="get">
+                    <div class="contenedor-input">
+                        <input class="form-input" type="email" placeholder="Correo eletrónico" required>
+                        <label class="form-label" for="email"></label>
+                    </div>
+        
+                    <div class="contenedor-input">
+                        <input class="form-input" type="text" placeholder="Usuario" required>
+                        <label class="form-label" for="nombreDeUsuario"></label>
+                    </div>
+        
+                    <div class="contenedor-input">
+                        <input class="form-input" type="password" placeholder="Contraseña" required>
+                        <label class="form-label" for="contraseña"></label>
+                    </div>
+        
+                    <div class="contenedor-input">
+                        <input class="form-input" type="date" placeholder="Fecha de nacimiento" required>
+                        <label class="form-label" for="fecha"></label>
+                    </div>
+                    
+                    <div class="contenedor-input">
+                        <input class="form-input" type="number" placeholder="Numero de documento" required>
+                        <label class="form-label" for="documento"></label>
+                    </div>
+        
+                    <div class="contenedor-input1">
+                        <input class="form-input__button" type="submit" value="Confirmar datos">
+                        <label class="form-label" for="registrarme"></label>
+                    </div>
+                </form>
+            </div>
+            </main>
                     <%- include('./partials/footer') %>
     </body>
 
