--- a/proyecto-integrador/views/profile.ejs
+++ b/proyecto-integrador/views/profile.ejs
@@ -4,25 +4,25 @@
 <body>
     <%- include('./partials/headerLogueado') %>
 	<!-- Datos del usuario -->
-	<section class="info-usuario container products-wrapper">
+	<section class="info-usuario products-wrapper details">
 		<div class="row">
 			<div class="img-container offset-3 col-2">
 				<img src="<%= fotoPerfil %>" alt="foto de perfil" class="foto-perfil">
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
-					<h1 class="main-title"><%= nombreUsuario %>
-						<a href="/users/profile/edit">
+					<h1 class="main-title-profile"><%= nombreUsuario %>
+						<a class="profile-a" href="/users/profile/edit">
 							<i class="fas fa-cog"></i>
 						</a>
 					</h1>
-					<a class="btn mt-3 ml-4" href="">SEGUIR</a>
+					<a class="profile-a"  class="btn mt-3 ml-4" href="">SEGUIR</a>
 				</div>
 				<div>
-					<ul class="">
-						<li>8 productos</li>
-						<li>200 seguidores</li>
-						<li>300 comentarios</li>
+					<ul class="profile-ul">
+						<li class="profile-li">8 productos</li>
+						<li class="profile-li">200 seguidores</li>
+						<li class="profile-li">300 comentarios</li>
 					</ul>
 				</div>
 			</div>
@@ -60,4 +60,7 @@
 	<!-- /Mis productos -->
     <%- include('./partials/footer') %>
 </body>
+<script src="/js/uikit.min.js"></script>
+<script src="/js/header-scroll.js"></script>
+
 </html>
