--- a/proyecto-integrador/views/search-results.ejs
+++ b/proyecto-integrador/views/search-results.ejs
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
-    <%- include('./partials/head') %>
-<body>
-    <%- include('./partials/header') %>
-	<!-- Novedades -->
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Resultados de búsqueda</h2>
+<%- include('./partials/head') %>
+
+	<body>
+		<%- include('./partials/header') %>
+			<!-- Novedades -->
+			<div class="products-wrapper details__search">
+				<div class="col-12">
+					<h2 class="products-title"><%= mensaje %></h2>
+				</div>
+				<!-- Show the "ultimos" products -->
+				<% for( let i=0; i < index.length; i++ ) { %>
+					<div class="col-12 col-sm-6 col-lg-3">
+						<section class="product-box">
+							<a href="/product/<%= index[i].id %>">
+								<figure class="product-box_image">
+									<img src="<%= index[i].imagen %>" alt="">
+								</figure>
+								<article class="product-box_data">
+									<h2>
+										<%= index[i].nombreProducto %>
+									</h2>
+									<p>
+										<%= index[i].descripcion %>
+									</p>
+									<p>Comentarios: 3</p>
+								</article>
+							</a>
+						</section>
+						<% } %>
+					</div>
 			</div>
-			<!-- Show the "ultimos" products -->
-			<% for( let i = 0; i < index.length; i++ ) { %>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">	
-					<a href="/product/<%= index[i].id %>">
-						<figure class="product-box_image">
-							<img src="<%= index[i].imagen %>" alt="">
-						</figure>
-						<article class="product-box_data">
-							<h2><%= index[i].nombreProducto %></h2>
-							<p><%= index[i].descripcion %></p>
-							<p>Comentarios: 3</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<% } %>
-			
-    <%- include('./partials/footer') %>
-</body>
+			<%- include('./partials/footer') %>
+	</body>
+	<script src="/js/uikit.min.js"></script>
+<script src="/js/header-scroll.js"></script>
+
 </html>
