--- a/proyecto-integrador/views/partials/header.ejs
+++ b/proyecto-integrador/views/partials/header.ejs
@@ -11,6 +11,9 @@
                     <li class="nav__ul-li"><a class="ul__li-a" href="/product/add">AGREGAR PRODUCTOS</a></li>
                 </ul>
             </div>
+            <button class="btn-toggle-navbar">
+				<i class="fas fa-bars"></i>
+			</button>
             <div>
                 <ul class="uk-navbar-right">
                     <li class="nav__ul-li">
