--- a/proyecto-integrador/views/profile-edit.ejs
+++ b/proyecto-integrador/views/profile-edit.ejs
@@ -46,5 +46,6 @@
             </main>
                     <%- include('./partials/footer') %>
     </body>
-
+    <script src="/js/uikit.min.js"></script>
+    <script src="/js/header-scroll.js"></script>
 </html>
